--- a/style.css
+++ b/style.css
@@ -1,1 +1,335 @@
+*,
+*::before,
+*::after {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+.grid {
+	max-width: 1280px;
+	padding: 0 40px;
+	width: 100%;
+	margin: auto;
+	display: grid;
+	grid-template-areas:
+		"head"
+		"home"
+		"main"
+		"footer";
+	grid-template-columns: 1fr;
+	grid-template-rows: auto 1fr auto;
+	font-family: 'AvantGarde';
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 160%;
+}
+
+/*Header*/
+.header {
+	grid-area: head;
+	position: sticky;
+	top: 0;
+	z-index: 1;
+}
+
+.nav {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background: rgba(29, 216, 216, 0.75);
+}
+
+.nav-links {
+	display: grid;
+	grid-template-columns: repeat(6, auto);
+	grid-template-rows: auto;
+	list-style-type: none;
+	font-family: 'RodchenkoCondBold';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 17px;
+	line-height: 160%;
+	letter-spacing: 0.2em;
+}
+
+.nav-link a {
+	text-decoration: none;
+	transition: color 0.2s linear;
+	color: white;
+}
+
+.nav-link__active a {
+	color: #d53e07;
+	border-bottom: 3px solid #d53e07;
+}
+
+.nav-link a:hover {
+	color: #008b6d;
+}
+
+/*Home*/
+.home {
+	height: 70vh;
+	grid-area: home;
+	display: grid;
+	grid-template-columns: 10% 1fr 2fr;
+	grid-template-rows: 1fr 1fr;
+	justify-content: space-between;
+    background-image: url("./images/image.jpg");
+    background-position: center;
+}
+
+.home-title {
+	grid-column: 2 / 3;
+	grid-row: 1 / 2;
+	margin-top: 1.25em;
+    margin-left: 30%;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+	height: max-content;
+	justify-self: stretch;
+	text-align: center;
+	padding: 0 .25em;
+}
+
+/*Main*/
+.main {
+	grid-area: main;
+	display: grid;
+	grid-template-areas:
+		"about about about"
+		"interest education education"
+		"page page skill"
+		"page page skill";
+	grid-template-columns: 1.1fr 2fr 1.2fr;
+	grid-template-rows: auto;
+	align-content: start;
+}
+
+.about {
+	grid-area: about;
+	background-color: #FDF4E3;
+	padding: 0 1.5em;
+}
+
+.interests {
+	grid-area: interest;
+	background-color: #F5F5DC;
+}
+
+.education {
+	grid-area: education;
+	background-color: #FFFDD0;
+}
+
+.education-content {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+}
+
+.year {
+	/*hor*/
+	justify-self: center;
+	/*ver*/
+	align-self: center;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 160%;
+	color: #004f49;
+	width: max-content;
+	text-align: center;
+	font-stretch: ultra-condensed;
+	}
+
+
+.skills {
+	grid-area: skill;
+	background-color: rgb(241, 189, 124);
+	background-color: #D2B48C;
+}
+
+.languages {
+	grid-area: language;
+	background-color: #F5F5DC;
+	background-color: #d89a5b;
+}
+.languages li, .courses li, .skills li, .interests li {
+    padding: 1em;
+}
+
+/*Page*/
+.page {
+	grid-area: page;
+	display: grid;
+	grid-template-areas:
+		"course code"
+        "language code";
+	grid-template-columns: 1fr 2.5fr;
+	grid-template-rows: auto;
+}
+
+.courses {
+	grid-area: course;
+	background-color: #F5F5DC;
+	background-color: #CC99FE;
+	background-color: #b39c65;
+}
+
+.code {
+	justify-self: stretch;
+	grid-area: code;
+	line-height: normal;
+	background-color: black;
+	color: #23d300;
+	padding: 0 1em;
+}
+
+.prettyprint {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+#code__text {
+	padding: 0 5px;
+}
+
+/*Footer*/
+.footer {
+	grid-area: footer;
+	display: grid;
+	grid-template-columns: max-content 1.5fr 1fr;
+	grid-template-rows: max-content;
+	justify-content: space-around;
+	background: rgb(216, 167, 29);
+}
+
+.rsschool-logo {
+	align-self: center;
+	grid-column: 1 / 2;
+	width: 100px;
+}
+
+/**/
+.icons {
+	justify-self: end;
+	grid-column: 2 / 3;
+	grid-row: 1 / 2;
+	display: grid;
+	grid-template-columns: auto;
+	grid-auto-flow: column;
+	justify-items: center;
+	align-items: center;
+	padding: 0;
+}
+
+.icon {
+	width: 44px;
+	height: 44px;
+}
+
+.author {
+	grid-column: 3 / 4;
+	height: max-content;
+	align-self: center;
+	justify-self: end;
+	display: grid;
+	grid-template-columns: auto 1fr;
+}
+
+.copyright-icon {
+	align-self: center;
+	width: 1em;
+	margin-right: 0.5em;
+}
+
+/*The end*/
+.heading {
+	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	letter-spacing: 50%;
+}
+
+.subheading {
+	padding-bottom: 1em;
+}
+
+.content {
+	padding-bottom: .5em;
+	padding: 0 1.5em;
+	margin-bottom: 1em;
+}
+
+div strong {
+	font-size: 16px;
+	color: #00008b;
+}
+
+ul {
+	list-style-type: none;
+	padding-left: 0;
+}
+
+ul li {
+	margin: 5px;
+}
+
+ol {
+	list-style-type: upper-roman;
+	list-style-position: inside;
+	padding-left: 1em;
+}
+
+.ul-iterests li {
+	background: #cce5ff;
+	color: #00008b;
+}
+
+.ul-slills li {
+	background: #cce5ff;
+	color: #00008b;
+}
+
+.ul-languages li {
+	background: #FDF4E3;
+	color: #004f49;
+}
+
+.ul-courses li {
+	background: #FDF4E3;
+	color: #004f49;
+}
+
+h1 {
+	font-family: 'RodchenkoCond';
+	font-style: normal;
+	font-weight: 800;
+	font-size: 44px;
+	line-height: 160%;
+	letter-spacing: 0.2em;
+	text-decoration: none;
+}
+
+h4 {
+	font-family: 'RodchenkoCond';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 115%;
+	letter-spacing: 0.2em;
+	color: #d53e07;
+}
+
+h5 {
+	font-family: 'RodchenkoCond';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 17px;
+	line-height: 110%;
+	letter-spacing: 0.2em;
+	color: #7255ce;
+	color: #0000FF;
+	text-align: center;
+	padding-bottom: .75em;
+}
 
